--- a/datepicker-demo.html
+++ b/datepicker-demo.html
@@ -5,8 +5,14 @@
 	<title>DatePicker Demo</title>
 	<style>
 	html,body {
-		font-size:	12px;
+		font-size:		72.5%;
 		font-family: Arial, Helvetica, sans-serif;
+	}
+	body > div {
+		font-size:		1.6em;
+	}
+	div > div {
+		padding-bottom:	.7em;
 	}
 	</style>
 	<link rel='stylesheet' type='text/css' media="screen" href='datepicker.css' />
@@ -14,56 +20,26 @@
 </head>
 
 <body>
-<form>
 	<div>
-		<h1>DatePicker</h1>
-		<p>
-			Just use the same prefix in ID attributes and everything should be fine...
-		</p>
-
-		<h2>How to use</h2>
-
-		<p>
-			<strong>Using a single input</strong><br />
-			For a given id attribute of 'birthday', you should have<br />
-			- an input text with id equal to 'birthday'
-			- an onclick event on it to show datepicker
-		</p>
-		<p>
-			<strong>Using select</strong><br />
-			For a given id attribute of 'birthday', you should have<br />
-			- 3 selects with ids 'birthday_day', 'birthday_month' & 'birthday_year'.<br />
-			- an hidden input text with id equal to 'birthday'
-			- an element with id equal to 'birthday_dp' so the datepicker could use its X-Y position (could be anything)
-		</p>
-		<p>
-			Then, use ds_sh(id value, position) to use datepicker. Here, id value is 'birthday', position can be a element id (its X-Y position is used) or a object (as [X,Y]) if you need to control its position more. If you don't define <i>position</i>, then previous position is used. 
-		</p>
-	</div>
-	
-	<hr>
-	
-	<div>
-	
 		<h2>DatePicker implementation examples</h2>
-	
+
 		<div>
 			<label for="doc_single">Single input:</label>
-			<input type="text" name="doc_single" id="doc_single" value="2011-06-02">
-			<a onclick="ds_sh('doc_single','doc_single_dp')" id="doc_single_dp"><img src="datepicker_cal.gif" /></a>
+			<input type="text" name="doc_single" id="doc_single" value="1982-06-02">
+			<a onclick="DP.open('doc_single','doc_single_icon')" id="doc_single_icon"><img src="datepicker_cal.gif" /></a>
 		</div>
-		
+
 		<div>
 			<label for="date_button">Input + button:</label>
-			<input type="text" name="date_button" id="date_button" value="2011-06-02" onclick="ds_sh('date_button','date_button')">
+			<input type="text" name="date_button" id="date_button" onclick="DP.open('date_button','date_button')">
 		</div>
-	
+
 		<div>
 			<label for="date_select1_day">Using selects:</label>
-			<select name="date_select1_day" id="date_select1_day" size="1" class="text day" onblur="ds_update('date_select1')">
+			<select name="date_select1_day" id="date_select1_day" size="1" class="text day" onchange="DP.update('date_select1')">
 				<option value="">--</option>
 				<option value="01">01</option>
-				<option value="02" selected="selected">02</option>
+				<option value="02">02</option>
 				<option value="03">03</option>
 				<option value="04">04</option>
 				<option value="05">05</option>
@@ -94,15 +70,15 @@
 				<option value="30">30</option>
 				<option value="31">31</option>
 			</select>
-			
-			<select name="date_select1_month" id="date_select1_month" size="1" class="text month" onblur="ds_update('date_select1')">
+
+			<select name="date_select1_month" id="date_select1_month" size="1" class="text month" onchange="DP.update('date_select1')">
 				<option value="">--</option>
 				<option value="01">01 - january</option>
 				<option value="02">02 - february</option>
 				<option value="03">03 - march</option>
 				<option value="04">04 - april</option>
 				<option value="05">05 - may</option>
-				<option value="06" selected="selected">06 - june</option>
+				<option value="06">06 - june</option>
 				<option value="07">07 - july</option>
 				<option value="08">08 - august</option>
 				<option value="09">09 - september</option>
@@ -110,8 +86,8 @@
 				<option value="11">11 - november</option>
 				<option value="12">12 - december</option>
 			</select>
-			
-			<select name="date_select1_year" id="date_select1_year" size="1" class="text year" onblur="ds_update('date_select1')">
+
+			<select name="date_select1_year" id="date_select1_year" size="1" class="text year" onchange="DP.update('date_select1')">
 				<option value="">--</option>
 				<option value="2021">2021</option>
 				<option value="2020">2020</option>
@@ -123,7 +99,7 @@
 				<option value="2014">2014</option>
 				<option value="2013">2013</option>
 				<option value="2012">2012</option>
-				<option value="2011" selected="selected">2011</option>
+				<option value="2011">2011</option>
 				<option value="2010">2010</option>
 				<option value="2009">2009</option>
 				<option value="2008">2008</option>
@@ -165,84 +141,15 @@
 				<option value="1972">1972</option>
 				<option value="1971">1971</option>
 				<option value="1970">1970</option>
-				<option value="1969">1969</option>
-				<option value="1968">1968</option>
-				<option value="1967">1967</option>
-				<option value="1966">1966</option>
-				<option value="1965">1965</option>
-				<option value="1964">1964</option>
-				<option value="1963">1963</option>
-				<option value="1962">1962</option>
-				<option value="1961">1961</option>
-				<option value="1960">1960</option>
-				<option value="1959">1959</option>
-				<option value="1958">1958</option>
-				<option value="1957">1957</option>
-				<option value="1956">1956</option>
-				<option value="1955">1955</option>
-				<option value="1954">1954</option>
-				<option value="1953">1953</option>
-				<option value="1952">1952</option>
-				<option value="1951">1951</option>
-				<option value="1950">1950</option>
-				<option value="1949">1949</option>
-				<option value="1948">1948</option>
-				<option value="1947">1947</option>
-				<option value="1946">1946</option>
-				<option value="1945">1945</option>
-				<option value="1944">1944</option>
-				<option value="1943">1943</option>
-				<option value="1942">1942</option>
-				<option value="1941">1941</option>
-				<option value="1940">1940</option>
-				<option value="1939">1939</option>
-				<option value="1938">1938</option>
-				<option value="1937">1937</option>
-				<option value="1936">1936</option>
-				<option value="1935">1935</option>
-				<option value="1934">1934</option>
-				<option value="1933">1933</option>
-				<option value="1932">1932</option>
-				<option value="1931">1931</option>
-				<option value="1930">1930</option>
-				<option value="1929">1929</option>
-				<option value="1928">1928</option>
-				<option value="1927">1927</option>
-				<option value="1926">1926</option>
-				<option value="1925">1925</option>
-				<option value="1924">1924</option>
-				<option value="1923">1923</option>
-				<option value="1922">1922</option>
-				<option value="1921">1921</option>
-				<option value="1920">1920</option>
-				<option value="1919">1919</option>
-				<option value="1918">1918</option>
-				<option value="1917">1917</option>
-				<option value="1916">1916</option>
-				<option value="1915">1915</option>
-				<option value="1914">1914</option>
-				<option value="1913">1913</option>
-				<option value="1912">1912</option>
-				<option value="1911">1911</option>
-				<option value="1910">1910</option>
-				<option value="1909">1909</option>
-				<option value="1908">1908</option>
-				<option value="1907">1907</option>
-				<option value="1906">1906</option>
-				<option value="1905">1905</option>
-				<option value="1904">1904</option>
-				<option value="1903">1903</option>
-				<option value="1902">1902</option>
-				<option value="1901">1901</option>
 			</select>
-			<input type="hidden" class="hidden" name="date_select1" id="date_select1" value="2011-06-02">
-			<a href="javascript:ds_sh('date_select1','date_select1_dp')" id="date_select1_dp"><img src="datepicker_cal.gif" /></a>
+			<a href="javascript:DP.open('date_select1','date_select1_icon')" id="date_select1_icon"><img src="datepicker_cal.gif" /></a>
+			<br><input type="text" name="date_select1" id="date_select1" readonly><br><i>(you can hide this field)</i>
 		</div>
-	
-	
+
+
 		<div>
-			<label for="date_select2_day">Using selects with position on day:</label>
-			<select name="date_select2_day" id="date_select2_day" size="1" class="text day" onblur="ds_update('date_select2')">
+			<label for="date_select2_day">Using selects with position as a HTML element:</label>
+			<select name="date_select2_day" id="date_select2_day" size="1" class="text day" onblur="DP.update('date_select2')">
 				<option value="">--</option>
 				<option value="01">01</option>
 				<option value="02" selected="selected">02</option>
@@ -276,8 +183,8 @@
 				<option value="30">30</option>
 				<option value="31">31</option>
 			</select>
-			
-			<select name="date_select2_month" id="date_select2_month" size="1" class="text month" onblur="ds_update('date_select2')">
+
+			<select name="date_select2_month" id="date_select2_month" size="1" class="text month" onblur="DP.update('date_select2')">
 				<option value="">--</option>
 				<option value="01">01 - january</option>
 				<option value="02">02 - february</option>
@@ -292,8 +199,8 @@
 				<option value="11">11 - november</option>
 				<option value="12">12 - december</option>
 			</select>
-			
-			<select name="date_select2_year" id="date_select2_year" size="1" class="text year" onblur="ds_update('date_select2')">
+
+			<select name="date_select2_year" id="date_select2_year" size="1" class="text year" onblur="DP.update('date_select2')">
 				<option value="">--</option>
 				<option value="2021">2021</option>
 				<option value="2020">2020</option>
@@ -305,7 +212,7 @@
 				<option value="2014">2014</option>
 				<option value="2013">2013</option>
 				<option value="2012">2012</option>
-				<option value="2011" selected="selected">2011</option>
+				<option value="2011">2011</option>
 				<option value="2010">2010</option>
 				<option value="2009">2009</option>
 				<option value="2008">2008</option>
@@ -334,7 +241,7 @@
 				<option value="1985">1985</option>
 				<option value="1984">1984</option>
 				<option value="1983">1983</option>
-				<option value="1982">1982</option>
+				<option value="1982" selected="true">1982</option>
 				<option value="1981">1981</option>
 				<option value="1980">1980</option>
 				<option value="1979">1979</option>
@@ -347,108 +254,45 @@
 				<option value="1972">1972</option>
 				<option value="1971">1971</option>
 				<option value="1970">1970</option>
-				<option value="1969">1969</option>
-				<option value="1968">1968</option>
-				<option value="1967">1967</option>
-				<option value="1966">1966</option>
-				<option value="1965">1965</option>
-				<option value="1964">1964</option>
-				<option value="1963">1963</option>
-				<option value="1962">1962</option>
-				<option value="1961">1961</option>
-				<option value="1960">1960</option>
-				<option value="1959">1959</option>
-				<option value="1958">1958</option>
-				<option value="1957">1957</option>
-				<option value="1956">1956</option>
-				<option value="1955">1955</option>
-				<option value="1954">1954</option>
-				<option value="1953">1953</option>
-				<option value="1952">1952</option>
-				<option value="1951">1951</option>
-				<option value="1950">1950</option>
-				<option value="1949">1949</option>
-				<option value="1948">1948</option>
-				<option value="1947">1947</option>
-				<option value="1946">1946</option>
-				<option value="1945">1945</option>
-				<option value="1944">1944</option>
-				<option value="1943">1943</option>
-				<option value="1942">1942</option>
-				<option value="1941">1941</option>
-				<option value="1940">1940</option>
-				<option value="1939">1939</option>
-				<option value="1938">1938</option>
-				<option value="1937">1937</option>
-				<option value="1936">1936</option>
-				<option value="1935">1935</option>
-				<option value="1934">1934</option>
-				<option value="1933">1933</option>
-				<option value="1932">1932</option>
-				<option value="1931">1931</option>
-				<option value="1930">1930</option>
-				<option value="1929">1929</option>
-				<option value="1928">1928</option>
-				<option value="1927">1927</option>
-				<option value="1926">1926</option>
-				<option value="1925">1925</option>
-				<option value="1924">1924</option>
-				<option value="1923">1923</option>
-				<option value="1922">1922</option>
-				<option value="1921">1921</option>
-				<option value="1920">1920</option>
-				<option value="1919">1919</option>
-				<option value="1918">1918</option>
-				<option value="1917">1917</option>
-				<option value="1916">1916</option>
-				<option value="1915">1915</option>
-				<option value="1914">1914</option>
-				<option value="1913">1913</option>
-				<option value="1912">1912</option>
-				<option value="1911">1911</option>
-				<option value="1910">1910</option>
-				<option value="1909">1909</option>
-				<option value="1908">1908</option>
-				<option value="1907">1907</option>
-				<option value="1906">1906</option>
-				<option value="1905">1905</option>
-				<option value="1904">1904</option>
-				<option value="1903">1903</option>
-				<option value="1902">1902</option>
-				<option value="1901">1901</option>
 			</select>
 			<input type="hidden" class="hidden" name="date_select2" id="date_select2" value="2011-06-02">
-			<a href="javascript:ds_sh('date_select2','date_select2_day')"><img src="datepicker_cal.gif" /></a>
+			<a href="javascript:DP.open('date_select2', document.getElementById('date_select2_day'))"><img src="datepicker_cal.gif" /></a>
 		</div>
-	
-	
-		<div>
-			<label for="date_position">Single input at a given position:</label>
-			<input type="text" name="date_position" id="date_position" value="2011-06-02" onclick="ds_sh('date_position',[50,50])">
-		</div>
-	
+
+
 		<div>
 			<label for="date_no_position">Single input with no given position:</label>
-			<input type="text" name="date_no_position" id="date_no_position" value="2011-06-02" onclick="ds_sh('date_no_position')">
+			<input type="text" name="date_no_position" id="date_no_position" onclick="DP.open('date_no_position')">
 		</div>
-	
-	
-	
-		<table class="ds_box" style="display:none" cellpadding="0" cellspacing="0" id="ds_conclass">
-			<tr>
-				<td id="ds_calclass"></td>
-			</tr>
-		</table>
+
+		<div>
+			<label for="date_position">Single input at a given position:</label>
+			<input type="text" name="date_position" id="date_position" onclick="DP.open('date_position',[100,50])">
+		</div>
+
+		<table id="datepicker" class="dp_calendar" style="display:none" cellpadding="0" cellspacing="0"></table>
 
 	</div>
-	
+
 	<hr>
 
 	<div>
 		<p>
-			<a href="https://github.com/remi-grumeau/DatePicker" target="_blank">Fork me on Git</a>
+			 <a href="http://remi-grumeau.github.io/DatePicker/" target="_blank">http://remi-grumeau.github.io/DatePicker/</a>
 		</p>
 	</div>
+
+
+	<script>
+	// SET ALL INPUTS VALUE TO TODAY
+	(function() {
+	var d = new Date();
+	var date_button_val = d.getFullYear()+'-'+(((d.getMonth()+1)<10)?'0'+(d.getMonth()+1):d.getMonth())+'-'+d.getDate();
+	document.getElementById('date_button').value = date_button_val;
+	document.getElementById('date_position').value = date_button_val;
+	document.getElementById('date_no_position').value = date_button_val;
+	})();
+	</script>
 
 </form>
 </body>
