--- a/index.html
+++ b/index.html
@@ -43,13 +43,7 @@ No third-party library dependency, IE support is IE8+.</p>
 
 <p>First, you need to put a table element inside your page which the library can use to generate the calendar.</p>
 
-<div class="highlight highlight-html"><pre><span class="nt">&lt;table</span>
-    <span class="na">id=</span><span class="s">"datepicker"</span>
-    <span class="na">class=</span><span class="s">"dp_calendar"</span>
-    <span class="na">cellpadding=</span><span class="s">"0"</span>
-    <span class="na">cellspacing=</span><span class="s">"0"</span>
-<span class="nt">&gt;</span>
-</pre></div>
+<div class="highlight highlight-html"><pre><span class="nt">&lt;table</span> <span class="na">id=</span><span class="s">"datepicker"</span> <span class="na">class=</span><span class="s">"dp_calendar"</span> <span class="na">cellpadding=</span><span class="s">"0"</span> <span class="na">cellspacing=</span><span class="s">"0"</span><span class="nt">&gt;&lt;table&gt;</span></pre></div>
 
 <p>For a given id attribute of 'birthday', you should have</p>
 
