--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 <p>This script is a modern browser automatic date picker solution. 
 No third-party library dependency, IE support is IE8+.</p>
+<p>See <a href="demo/datepicker-demo.html">Live demo</a>.</p>
 
 <h1>
 <a name="how-to-use" class="anchor" href="#how-to-use"><span class="octicon octicon-link"></span></a>How to use</h1>
